@@ -7,10 +7,12 @@ i3_project(filter-tools
 i3_add_library(filter-tools
   private/filter-tools/*.cxx
   USE_TOOLS boost
-  USE_PROJECTS serialization icetray dataclasses interfaces
+  USE_PROJECTS serialization icetray dataclasses interfaces phys-services
   )
 
 i3_test_executable(test private/test/*.cxx
   USE_PROJECTS icetray filter-tools phys-services
   USE_TOOLS python
   )
+
+i3_test_scripts(resources/test/test_filter_mask_maker.py)
